src/objects/Audit_Log_Account_Answer__c.object
<CustomObject>
    <description>BST- Custom Object created for Field history tracking of the Account Profile Object</description>
    <fields>
        <fullName>BST_ACCOUNT_PROFILE__c</fullName>
        <description>BST-Field stores the id of the parent account answer</description>
        <label>Account Profile</label>
        <referenceTo>Account_Profile__c</referenceTo>
        <relationshipLabel>Audit Log Account Answers</relationshipLabel>
        <relationshipName>Audit_Log_Account_Answers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BST_FIELD_API_NAME__c</fullName>
        <description>BST-Field stores the API Name of the field</description>
        <label>Field API Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BST_FIELD_LABEL__c</fullName>
        <description>BST-Field stores the field label of the record</description>
        <label>Field Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BST_FIELD_NEW_VALUE__c</fullName>
        <description>BST-Field stores the new value of the field in record</description>
        <label>Field New Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BST_FIELD_OLD_VALUE__c</fullName>
        <description>BST-Field stores the old value of the field in the record</description>
        <label>Field Old Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Audit Log Account Answer</label>
    <nameField>
        <displayFormat>ALA-{00000}</displayFormat>
        <label>Audit Log Account Answer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Audit Log Account Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>